--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.15",
     "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3",
